# swe4ds-credit-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: .gitignore  credit_sample.csv.dvc
scripts/: download_data.py  process_sample.py
src/: __init__.py  data_loader.py  validation.py
tests/: conftest.py
tests/unit/: test_data_loader.py  test_example.py  test_sanity.py  test_validation.py
