[project]
name = "swe4ds-credit-api"
version = "0.1.0"
description = "API de análise de crédito para o curso SWE4DS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

authors = [
    {name = "SWE4DS Team", email = "team@example.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["credit", "machine-learning", "api", "fastapi"]

dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.3,<2.0",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.100,<1.0",
    "uvicorn>=0.24,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.1,<1.0",
    "taskipy>=1.12,<2.0",
]

[project.scripts]
# swe4ds-credit = "src.cli:main"

[project.urls]
Homepage = "https://github.com/swe4ds/credit-api"
Documentation = "https://github.com/swe4ds/credit-api#readme"
Repository = "https://github.com/swe4ds/credit-api"
Issues = "https://github.com/swe4ds/credit-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Configurações específicas do UV
dev-dependencies = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.1,<1.0",
    "taskipy>=1.12,<2.0",
]

[tool.taskipy.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src --cov-report=html --cov-report=term"
lint = "ruff check src/ tests/"
lint-fix = "ruff check src/ tests/ --fix"
format = "ruff format src/ tests/"
format-check = "ruff format src/ tests/ --check"
check = "task lint && task format-check && task test"
clean = "rm -rf .pytest_cache .coverage htmlcov __pycache__ .ruff_cache"

# =============================================================================
# PYTEST - Configuração de Testes
# =============================================================================
[tool.pytest.ini_options]
# Diretório de testes
testpaths = ["tests"]

# Opções padrão
addopts = [
    "-v",                    # Verbose
    "--strict-markers",      # Markers devem ser declarados
    "--tb=short",            # Traceback curto
]

# Markers personalizados
markers = [
    "slow: testes lentos (rodar com -m 'not slow' para pular)",
    "integration: testes de integração",
]

# Padrão de arquivos de teste
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# =============================================================================
# COVERAGE - Configuração de Cobertura
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true

# =============================================================================
# RUFF - Linter e Formatador
# =============================================================================
[tool.ruff]
# Versão do Python alvo
target-version = "py312"

# Tamanho máximo de linha
line-length = 88

# Diretórios a verificar
src = ["src", "tests"]

# Arquivos/pastas a ignorar
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Regras a habilitar
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (ordenação de imports)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

# Regras a ignorar
ignore = [
    "E501",   # line too long (formatador cuida)
    "B008",   # function call in argument defaults
]

# Permitir correção automática para todas as regras habilitadas
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Testes podem ter imports não usados (fixtures)
"tests/*" = ["F401"]

[tool.ruff.lint.isort]
# Configuração do ordenador de imports
known-first-party = ["src"]

[tool.ruff.format]
# Estilo de aspas
quote-style = "double"

# Indentação
indent-style = "space"

# Final de linha
line-ending = "auto"